--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
         "psr-4": {"ICalendarOrg\\": "src/ICalendarOrg/"}
     },
     "require": {
-        "php": ">=7.4 <8.4"
+        "php": ">=7.4 <8.5"
 		},
 		"require-dev": {
-        "phpunit/phpunit": "<11.0",
+        "phpunit/phpunit": "<12.0",
         "friendsofphp/php-cs-fixer": "^3.3",
         "phpstan/phpstan": "^1.8",
-        "phpfui/phpunit-syntax-coverage": "^1.0"
+        "phpfui/phpunit-syntax-coverage": "dev-master"
     }
 }
