--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit backupGlobals="false"
-					backupStaticAttributes="false"
-					colors="true"
-					convertErrorsToExceptions="true"
-					convertNoticesToExceptions="true"
-					convertWarningsToExceptions="true"
-					convertDeprecationsToExceptions="true"
-					processIsolation="false"
-					stopOnFailure="true"
-					bootstrap="./tests/bootstrap.php"
-					>
-
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	backupGlobals="false"
+	colors="true"
+	processIsolation="false"
+	stopOnFailure="false"
+	displayDetailsOnTestsThatTriggerDeprecations="true"
+	displayDetailsOnTestsThatTriggerErrors="true"
+	displayDetailsOnTestsThatTriggerNotices="true"
+	displayDetailsOnTestsThatTriggerWarnings="true"
+	bootstrap="./tests/bootstrap.php"
+	backupStaticProperties="false"
+	>
 	<testsuites>
-    <testsuite name="ICalendarOrg tests">
+		<testsuite name="ICalendarOrg tests">
 			<directory>./tests/</directory>
 		</testsuite>
 	</testsuites>
