--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,11 +4,12 @@
 	colors="true"
 	processIsolation="false"
 	stopOnFailure="false"
+	bootstrap="./tests/bootstrap.php"
+	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
 	displayDetailsOnTestsThatTriggerDeprecations="true"
 	displayDetailsOnTestsThatTriggerErrors="true"
 	displayDetailsOnTestsThatTriggerNotices="true"
 	displayDetailsOnTestsThatTriggerWarnings="true"
-	bootstrap="./tests/bootstrap.php"
 	backupStaticProperties="false"
 	>
 	<testsuites>
