--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
         "psr-4": {"ICalendarOrg\\": "src/ICalendarOrg/"}
     },
     "require": {
-        "php": ">=7.4 <8.5"
+        "php": ">=7.4 <8.6"
 		},
 		"require-dev": {
-        "phpunit/phpunit": "<12.0",
+        "phpunit/phpunit": ">=12.0",
         "friendsofphp/php-cs-fixer": "^3.3",
         "phpstan/phpstan": "^2.0",
         "phpfui/phpunit-syntax-coverage": "dev-master"
