--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
         "php": ">=7.4 <8.6"
 		},
 		"require-dev": {
-        "phpunit/phpunit": ">=12.0",
-        "friendsofphp/php-cs-fixer": "^3.3",
-        "phpstan/phpstan": "^2.0",
+        "phpunit/phpunit": "<13.0",
+        "friendsofphp/php-cs-fixer": "*",
+        "phpstan/phpstan": "*",
         "phpfui/phpunit-syntax-coverage": "dev-master"
     }
 }
